# cetus-compiler

./: CMakeLists.txt  main.cpp
compiler/: Lexer.cpp  Lexer.h  Token.h
docs/: README.md  cetus_grammar.txt  cetus_language.md
docs/spec/: ast.md  diagnostics.md  errors.md  execution-model.md  expressions.md  functions.md  grammar.md  interpreter.md  intro.md  lexical-structure.md  mocks.md  modules.md  roadmap.md  runtime.md  semantic-analysis.md  standard-library.md  statements.md  syntax.md  tests.md  types.md
docs/tasks/Построить_таблицы_LR_разбора_для_следующих_грамматик/in/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt
src/app/: main.cpp
src/app/cli/: CommandLineInterface.cpp  CommandLineInterface.h
src/app/cli/commands/: BytecodeExecutionDriver.cpp  BytecodeExecutionDriver.h  ParserDriver.cpp  ParserDriver.h  PredefinedSymbols.cpp  PredefinedSymbols.h  RunAsmExpressionDriver.cpp  RunAsmExpressionDriver.h  RunExpressionDriver.cpp  RunExpressionDriver.h  TableGeneratorDriver.cpp  TableGeneratorDriver.h  TypeCheckDriver.cpp  TypeCheckDriver.h
src/backend/vm/: NativeFunctions.h  vm.cpp  vm.h
src/backend/vm/disassembler/: Disassembler.cpp  Disassembler.h
src/backend/vm/examples/bytecode/: arithmetic.txt  control_flow.txt  native.txt  (+2 more)
src/backend/vm/instructions/: BinaryInstruction.h  CallInstruction.cpp  ConstantInstruction.cpp  DefineGlobalInstruction.cpp  GetLocalInstruction.h  Instruction.h  InstructionRegistry.h  JumpIfFalseInstruction.cpp  JumpIfFalseInstruction.h  JumpInstruction.cpp  JumpInstruction.h  NotInstruction.cpp  NotInstruction.h  PopInstruction.h  ReturnInstruction.cpp  SetGlobalInstruction.cpp  SetLocalInstruction.h
src/backend/vm/objects/: ObjFunction.cpp  ObjFunction.h  ObjNative.cpp  ObjNative.h
src/backend/vm/parser/: BytecodeParser.cpp  BytecodeParser.h  Types.h
src/backend/vm/types/: CallFrame.h  Chunk.cpp  Chunk.h  OpCode.h  Value.cpp  Value.h
src/cli/: CommandLineInterface.cpp  CommandLineInterface.h
src/cli/driver/: BytecodeExecutionDriver.cpp  BytecodeExecutionDriver.h  ParserDriver.cpp  ParserDriver.h  TableGeneratorDriver.cpp  TableGeneratorDriver.h
src/common/grammar/: Production.cpp
src/common/types/: LR0Item.h
src/compiler/lalr/: LALRBuilder.cpp  LALRBuilder.h  LR1ClosureCalculator.cpp  LR1ClosureCalculator.h
src/compiler/lalr/types/: Action.h  LALR.h  LR.h  ParserDefinition.h
src/compiler/lexer/: Lexer.cpp  Lexer.h
src/compiler/parser/: TableDrivenParser.cpp  TableDrivenParser.h  TokenSymbolMapper.cpp  TokenSymbolMapper.h
src/compiler/slr-builder/: AutomatonBuilder.cpp  AutomatonBuilder.h
src/frontend/codegen/: AsmCodegenResult.h  AsmCodegenVisitor.cpp  AsmCodegenVisitor.h  AsmProgram.cpp  AsmProgram.h  CodegenResult.h  CodegenVisitor.cpp  CodegenVisitor.h
src/frontend/codegen/asm/: AsmCodegenVisitor.cpp  AsmCodegenVisitor.h
src/frontend/lexer/: Lexer.cpp  Lexer.h
src/frontend/lexical/: LexicalAnalyzer.cpp  LexicalAnalyzer.h  Token.h
src/frontend/semantic/: SemanticAnalyzer.cpp  SemanticAnalyzer.h
src/frontend/semantic/rules/: TypeCheckResult.h  TypeRules.cpp  TypeRules.h
src/frontend/semantic/symbols/: SemanticSymbol.h  SymbolTable.cpp  SymbolTable.h
src/frontend/syntax/: GrammarPreparator.cpp  GrammarPreparator.h  SyntaxAnalyzer.cpp  SyntaxAnalyzer.h
src/frontend/syntax/ast/: ASTNode.cpp  ASTNode.h  ASTNodeVisitor.h  AstDumper.cpp  AstDumper.h  Expr.cpp  Expr.h  ExprVisitor.h
src/frontend/syntax/grammar/: Grammar.cpp  Grammar.h  GrammarLoader.cpp  GrammarLoader.h  Production.cpp  Production.h  SemanticTag.h  Symbol.h
src/frontend/syntax/lalr/: ActionFormatter.cpp  ActionFormatter.h  LALRBuilder.cpp  LALRBuilder.h  LR1ClosureCalculator.cpp  LR1ClosureCalculator.h
src/frontend/syntax/parser/: AstReductionBuilder.cpp  AstReductionBuilder.h  ParseResult.h  TableDrivenParser.cpp  TableDrivenParser.h  TokenSymbolMapper.cpp  TokenSymbolMapper.h
src/frontend/syntax/presentation/: ParseTablePresenter.h
src/frontend/syntax/semantic/: Symbol.h  SymbolTable.cpp  SymbolTable.h  Type.h  TypeCheckResult.h  TypeCheckerVisitor.cpp  TypeCheckerVisitor.h  TypeEnvironment.cpp  TypeEnvironment.h  TypeRules.cpp  TypeRules.h
src/frontend/syntax/storage/: JsonPreparedGrammarStorage.cpp  JsonPreparedGrammarStorage.h  PreparedGrammarStorage.h
src/support/io/: FileReader.cpp  FileReader.h
src/utils/guding-set-provider/: GuidingSetProvider.cpp  GuidingSetProvider.h
src/utils/io/: GrammarLoader.cpp  GrammarLoader.h  TableExporter.cpp  TableExporter.h  TableVisualizer.cpp  TableVisualizer.h
src/utils/syntax/: TableExporter.cpp  TableExporter.h  TableVisualizer.cpp  TableVisualizer.h
src/vm/: NativeFunctions.h  common.h  parser_main.cpp  vm.cpp  vm.h
src/vm/disassembler/: Disassembler.cpp
src/vm/examples/bytecode/: loop.txt
src/vm/examples/sourcecode/: bubble-sort.txt
src/vm/instructions/: BinaryInstruction.h  CallInstruction.cpp  CallInstruction.h  ConstantInstruction.h  DefineGlobalInstruction.cpp  DefineGlobalInstruction.h  GetGlobalInstruction.cpp  GetGlobalInstruction.h  InstructionRegistry.h  LoopInstruction.cpp  LoopInstruction.h  NegateInstruction.cpp  PopInstruction.cpp  ReturnInstruction.cpp  ReturnInstruction.h  SetGlobalInstruction.h
src/vm/objects/: Obj.cpp  Obj.h  ObjFunction.h  ObjNative.cpp
src/vm/parser/: BytecodeParser.cpp  BytecodeParser.h  Types.h
src/vm/source/: control_flow.txt  logic.txt
src/vm/types/: CallFrame.h  InterpretResult.h  OpCode.h  chunk.h  value.cpp  value.h
tools/: cetus.sh
vm/: chunk.cpp  chunk.h  common.h  debug.cpp  debug.h  main.cpp  value.h  vm.cpp  vm.h
vm/disassembler/: Disassembler.cpp  Disassembler.h
vm/instructions/: BinaryInstruction.h  ConstantInstruction.h  GetLocalInstruction.cpp  GetLocalInstruction.h  Instruction.h  InstructionRegistry.h  NegateInstruction.h  ReturnInstruction.cpp  SetLocalInstruction.cpp  SetLocalInstruction.h
vm/objects/: ObjString.cpp  ObjString.h
vm/parser/: BytecodeParser.cpp  BytecodeParser.h
vm/source/: arithmetic.txt  string.txt
vm/types/: OpCode.h  chunk.cpp  chunk.h  value.cpp  value.h
(+11 files in other folders)
